[project]
name = "pg-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "fastapi>=0.131.0",
    "fastmcp>=3.0.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "uvicorn>=0.41.0",
]
