[project]
name = "postgres_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "databases>=0.9.0",
    "fastapi>=0.131.0",
    "fastmcp>=3.0.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]
[project.scripts]
postgres_ai = "postgres_ai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_ai"]
